--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,94 @@
 } */
 
 @import url("base.css");
+
+.body--primary {
+    background-color: var(--color-primary);
+    color: var(--color-text-on-primary);
+}
+
+.home .main__heading {
+    font-size: 128px;
+    font-weight: bold;
+}
+
+.home .main__sub-heading {
+    font-size: 40px;
+}
+
+.button {
+    font-size: 32px;
+    padding: 0 64px;
+    height: 100px;
+    border: 4px solid var(--color-button-border);
+    cursor: pointer;
+    transition: outline 0.2s linear;
+}
+
+.button:hover,
+.button:focus {
+    outline: 2px solid var(--color-text-on-primary);
+}
+
+.button--primary {
+    background-color: var(--color-button-primary-bg);
+    color: var(--color-button-primary-text);
+}
+
+.button--secondary {
+    background-color: var(--color-button-secondary-bg);
+    color: var(--color-button-secondary-text);
+}
+
+.button-container {
+    display: flex;
+    margin-top: 100px;
+}
+
+.button:not(button:last-of-type) {
+    margin-inline-end: 20px;
+}
+
+.button__icon {
+    vertical-align: middle;
+}
+
+.home .menu path,
+.home .close path {
+    fill: var(--color-text-on-primary);
+}
+
+@media (max-width: 1220px) {
+    .home .main__heading {
+        font-size: 70px;
+    }
+
+    .button {
+        font-size: 24px;
+        padding: 0 32px;
+        height: 70px ;
+    }
+}
+
+@media (max-width: 700px) {
+
+    .button {
+        font-size: 16px;
+        margin-top: 24px;
+    }
+
+    .button-container {
+        margin-top: 32px;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 590px) {
+    .home .main__heading {
+        font-size: 40px;
+    }
+
+    .home .main__sub-heading {
+        font-size: 24px;
+    }
+}
