--- a/styles/speakers.css
+++ b/styles/speakers.css
@@ -1,1 +1,69 @@
 @import url("base.css");
+
+.main {
+    margin: 0 auto;
+}
+
+.body--secondary {
+    background-color: var(--color-text-on-primary);
+    color: var(--color-primary);
+}
+
+.shopiing-cart-icon--primary path {
+    fill: var(--color-primary);
+}
+
+.speakers .main__title {
+    font-size: 98px;
+}
+
+.speaker__photo {
+    width: 310px;
+    height: 310px;
+    object-fit: cover;
+    margin-bottom: 36px;
+}
+
+.speaker__photo--top {
+    object-position: top;
+}
+
+.speaker__name {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.speaker__company {
+    font-size: 24px;
+    color: var(--color-text-on-secondary);
+    margin-bottom: 32px;
+}
+
+.speaker__bio {
+    font-size: 20px;
+    color: var(--color-text-on-secondary);
+}
+
+.speaker__wrapper {
+    max-width: 460px;
+}
+
+.speakers__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 200px;
+    grid-row-gap: 120px;
+    justify-items: center;
+}
+
+@media (max-width: 840px) {
+    .nav {
+        background-color: var(--color-text-on-primary);
+    }
+}
+
+@media (width < 1000px) {
+    .speakers__wrapper {
+        grid-template-columns: 1fr;
+    }
+}
